# BedrockMap

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  config.json
scripts/: build.ps1  deploy.ps1
src/: aboutdialog.cpp  asynclevelloader.cpp  chunk_task.cpp  chunkeditorwidget.cpp  chunkeditorwidget.ui  chunksectionwidget.cpp  config.cpp  gotopositiondialog.cpp  gotopositiondialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mapitemeditor.ui  maptile.cpp  mapwidget.cpp  nbtmodifydialog.cpp  nbtwidget.cpp  nbtwidget.ui  resourcemanager.cpp
src/include/: asynclevelloader.h  chunk_task.h  chunkeditorwidget.h  chunksectionwidget.h  config.h  gotopositiondialog.h  mainwindow.h  maptile.h  mapwidget.h  nbtmodifydialog.h  nbtwidget.h
